assets/_dev/src/scss/components/_popups.scss
.popup-closed {
  opacity    : 0;
  visibility : hidden;

  &:after {
    content          : "";
    display          : block;
    clear            : both;
    width            : auto;
    height           : auto;
    position         : fixed;
    top              : 0;
    left             : 0;
    right            : 0;
    bottom           : 0;
    background-color : rgba(30, 30, 61, 0.82);
  }

  transition : all 0.5s ease-in-out;

  &.visible {
    opacity    : 1;
    visibility : visible;
    transition : opacity 0.3s ease-in-out, visibility 0.5s ease-in-out;

    .popup {
      transform  : translateY(0);
      transition : all .8s ease-in-out;
    }
  }
}


.popup {
  position        : fixed;
  top             : 0;
  left            : 0;
  right           : 0;
  bottom          : 0;
  margin          : auto;
  display         : flex;
  justify-content : center;
  align-items     : center;

  width           : 25%;
  height          : 30em;
  background      : $white;
  padding         : 1em;
  border-radius   : $borderRadius;
  font-family     : $mainFont;
  z-index         : 1;
  transform       : translateY(-20px);
  transition      : transform 0.3s ease-in-out;

  &.popup-inscription {
    width  : 30%;
    height : 40em;

    .popup-container form div:nth-child(5) .input-container:first-child {
      overflow : visible;
    }
  }

  &.popup-prendreRDV {
    width  : 35%;
    height : 37em;

    .popup-container {
      justify-content : flex-start;

      form {
        justify-content : space-between;
        height          : 80%;
      }

      .prendreRdv__content__body__card-img {
        width  : 8rem;
        height : 8rem;
      }

      &-col {
        height : 25em;

        .prendreRdv__content__body__card-info {
          display         : flex;
          flex-direction  : column;
          justify-content : space-around;
          align-items     : center;
        }

        &__date {
          display          : flex;
          flex-direction   : column;
          justify-content  : space-around;
          align-items      : center;
          background-color : $secondaryLight;
          border-radius    : 10px;
          padding          : 1em;
          font-size        : 1.2em;
          color            : $greyDark;
          font-weight      : 600;
        }

        &__form {
          width           : 100%;
          display         : flex;
          justify-content : space-around;
          align-items     : center;

          .input-container {
            width : 40%;

            &-title {
              font-weight : 600;
              color       : $greyDark;

              span.primary {
                color : $secondary;
              }
            }
          }
        }
      }
    }
  }


  h1 {
    font-size     : 2.5em;
    margin-bottom : 1em;
  }

  p:not(.error) {
    color : $greyDark;
  }

  &-container {
    position        : relative;
    width           : 100%;
    height          : 100%;
    display         : flex;
    flex-direction  : column;
    justify-content : space-between;
    align-items     : center;


    &-row {
      width           : 100%;
      display         : flex;
      flex-direction  : row;
      justify-content : space-around;
      align-items     : center;

      .input-container {
        margin : 0 1em;
      }
    }

    &-col {
      width           : 80%;
      height          : 50%;
      display         : flex;
      flex-direction  : column;
      justify-content : space-around;
      align-items     : center;
    }

    form {
      display         : flex;
      flex-direction  : column;
      justify-content : space-around;
      align-items     : center;
      height          : 100%;
      width           : 100%;

      .italic {
        font-style : italic;
      }

      .input-container {
        width : 100%;
      }

      input:last-child {
        width : 18em;
      }
    }
  }


  .cross {
    position      : absolute;
    top           : 1em;
    right         : 1em;
    width         : 50px;
    height        : 50px;
    margin        : auto;
    border-radius : 50% 50%;
    cursor        : pointer;
    z-index       : 5;

    &::before {
      background : #888;
      position   : absolute;
      display    : block;
      content    : '';
      width      : 70%;
      height     : 6%;
      top        : 47%;
      left       : 15%;
      transform  : rotate(45deg);
    }

    &::after {
      background : #888;
      position   : absolute;
      display    : block;
      content    : '';
      width      : 6%;
      height     : 70%;
      left       : 47%;
      top        : 15%;
      transform  : rotate(45deg);
    }

    &:hover {
      &::before {
        background : red;
      }

      &::after {
        background : red;
      }
    }
  }
}


.auto_completion {
  position         : absolute;
  top              : 3.5rem;
  left             : 0;
  width            : 100%;
  //box-shadow       : 0px 2px 4px rgba(0, 0, 0, 0.38);
  border-radius    : 10px;
  font-size        : 18px;
  background-color : $white;
  overflow         : hidden;
  z-index          : 1;
  overflow-y       : scroll;
  font-family      : $mainFont;
  max-height       : 10em;
  border: 1px solid #dad8d8;
  box-sizing: border-box;

  p {
    padding        : 1em;
    font-size      : 0.85em;
    text-transform : unset;
    user-select    : none;
    cursor         : pointer;
  }

  p:hover {
    background-color : $light;
  }

  &.notVisible {
    display : none;
  }
}

